# RightAnswer

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  ingest.csv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml  tsconfig.base.json  turbo.json
apps/api/: Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
apps/api/migrations/: 0001_core.sql  0002_sharing.sql  0003_plans.sql  0004_exams_study_plans.sql
apps/api/python/: qwen_embedding_worker.py  requirements-qwen-embeddings.txt
apps/api/scripts/: textbook-batch-from-csv.ts  textbook-detect-chapters.ts  textbook-extract-pages.ts  textbook-ingestion-overrides.ts  textbook-script-shared.ts
apps/api/src/: admin.rs  auth.rs  config.rs  content_policy.rs  db.rs  error.rs  main.rs  main.ts  models.rs  openrouter.rs  qdrant.rs  rag.rs  routes.rs
apps/api/src/modules/: app.module.ts
apps/api/src/modules/account/: account.module.ts  account.service.ts
apps/api/src/modules/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
apps/api/src/modules/ask/: ask.controller.ts  ask.module.ts  ask.service.ts
apps/api/src/modules/auth/: auth.dto.ts  auth.module.ts
apps/api/src/modules/billing/: billing.service.ts
apps/api/src/modules/common/: cache.service.ts  current-user.decorator.ts  embedding.service.test.ts  embedding.service.ts  metrics.service.ts  prisma.service.ts  query.util.test.ts  query.util.ts  response.util.ts
apps/api/src/modules/content/: content.service.ts
(+59427 files in other folders)
