[package]
name = "right-answer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
governor = "0.10.4"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "catch-panic"] }
tower_governor = { version = "0.8.0", features = ["axum"], default-features = false }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
